@@ -317,11 +317,6 @@ bool Settings::stopDynamizerOnExit()
     return GET_BOOL("stopDynamizerOnExit", false);
 }
 
-bool Settings::stopAfterCurrent()
-{
-    return GET_BOOL("stopAfterCurrent", false);
-}
-
 bool Settings::storeCoversInMpdDir()
 {
     return GET_BOOL("storeCoversInMpdDir", true);
@@ -780,11 +775,6 @@ void Settings::saveStopOnExit(bool v)
 void Settings::saveStopDynamizerOnExit(bool v)
 {
     SET_VALUE_MOD(stopDynamizerOnExit)
-}
-
-void Settings::saveStopAfterCurrent(bool v)
-{
-    SET_VALUE_MOD(stopAfterCurrent)
 }
 
 void Settings::saveStoreCoversInMpdDir(bool v)
